screen refresh attempt #2 using process builder